--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+
+	<label for=""></label>
+	<input type="" id="" placeholder="">
+	
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name" required >
+	
+	<label for="">Email</label>
+	<input type="email" id="email" placeholder="Email" required>
+
+	<label for="gender_m">Male</label>
+	<input type="radio" id="gender_m" name="gender" required>
+	
+	<label for="gender_f">Femail</label>
+	<input type="gender" id="gender_f" name="gender" required>
+	
+	<label for="cars">Select Car</label>
+	<select type="select" id="cars">
+		<option>Bmw</option>
+		<option>Audi</option>
+		<option>Tata</option>
+	</select>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
