--- a/main.html
+++ b/main.html
@@ -7,28 +7,42 @@
 </head>
 
 <body>
-
-	<label for=""></label>
-	<input type="" id="" placeholder="">
-	
 	<label for="name">Name</label>
-	<input type="text" id="name" placeholder="Name" required >
+	<input type="text" id="name" placeholder="Name" required ><br
 	
-	<label for="">Email</label>
-	<input type="email" id="email" placeholder="Email" required>
+	<label for="email">Email</label>
+	<input type="email" id="email" placeholder="Email" required><br>
 
 	<label for="gender_m">Male</label>
-	<input type="radio" id="gender_m" name="gender" required>
+	<input type="radio" id="gender_m" name="gender" required><br>
 	
 	<label for="gender_f">Femail</label>
-	<input type="gender" id="gender_f" name="gender" required>
+	<input type="radio" id="gender_f" name="gender" required><br>
 	
-	<label for="cars">Select Car</label>
-	<select type="select" id="cars">
+	<label for="cars">Car Brands</label>
+	<select id="cars" required>
+		<option disabled selected>--Please choose an option--</option>
 		<option>Bmw</option>
 		<option>Audi</option>
 		<option>Tata</option>
 	</select>
+<br>
+	<label for="age">Age</label>
+	<input type="number" id="age" placehoilder="Age" required>
+
+	<label for="dob">DOB</label>
+	<input type="date" id="dob" required>
+	<br>
+	<label for="tel">Phone Number</label>
+	<input type="tel" id="tel" placeholder="	xxx-xxx-xxxx">
+	<br>
+	<label for="password">Password></label>
+	<input type="password" id=" password" placeholder="Password" required>
+	<br>
+	<label for="tos">I agree to the TOS</label>
+	<input type="checkbox" id="tos" required>
+	<br>
+	<button type="submit">Submit</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
