--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<form method="post" action="">
 	<label for="name">Name</label>
 	<input type="text" id="name" placeholder="Name" required ><br
 	
@@ -29,7 +30,7 @@
 <br>
 	<label for="age">Age</label>
 	<input type="number" id="age" placehoilder="Age" required>
-
+	<br>
 	<label for="dob">DOB</label>
 	<input type="date" id="dob" required>
 	<br>
@@ -43,6 +44,7 @@
 	<input type="checkbox" id="tos" required>
 	<br>
 	<button type="submit">Submit</button>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
