--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 	</select>
 <br>
 	<label for="age">Age</label>
-	<input type="number" id="age" placehoilder="Age" required>
+	<input type="number" id="age" placeholder="Age" required>
 	<br>
 	<label for="dob">DOB</label>
 	<input type="date" id="dob" required>
