--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<form method="post" action="">
 	<label for="name">Name</label>
-	<input type="text" id="name" placeholder="Name" required ><br
+	<input type="text" id="name" placeholder="Name" required ><br>
 	
 	<label for="email">Email</label>
 	<input type="email" id="email" placeholder="Email" required><br>
